Fix voice selection, install other needed packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -338,6 +338,7 @@ wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
 webencodings==0.5.1
 Werkzeug==1.0.1
 widgetsnbextension==3.5.1
+wikipedia==1.4.0
 wrapt==1.11.2
 wurlitzer @ file:///opt/concourse/worker/volumes/live/01a17f3d-eafe-4806-57a1-4b9ef5d1815f/volume/wurlitzer_1594753845129/work
 xlrd==1.2.0
